function to print a alphabet randomly & check is that right or not

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <canvas id="input_canvas"></canvas>
     </div>
     <div style="align-self: center">
+        <h2 id="random_alphabet_block"> Hello World</h2>
         <div id="loader"></div>
         <button id="button_recognize" onclick="StartRecognize()">
             Recognize
