basic game completed

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <button id="button_remove">
             Remove
         </button>
+        <button id="button_play_again" style="visibility: hidden;">
+            Play Again
+        </button>
         <label id="loading_label">Please wait...</label>
     </div>
     <div>
